--- a/index.html
+++ b/index.html
@@ -10,18 +10,18 @@
 <body>
     <main class="main">
         <section class="section1"> 
-            <h2>Square</h2>
+            <h2>¿Cuál es el descuento que te ofrecen?</h2>
             <form>    
-            <label for="inputprecio">Escriba el precio sin descuento:</label>
+            <label for="inputPrecio">Escriba el precio sin descuento:</label>
             <br/>
-                <input type="number" id="inputPrecio"/>
-                <br/>
-                <label for="inputprecio">Escriba el descuento ofrecido:</label>
-                <br/>
-                <input type="number" id="inputDescuento"/>
-                <br/>
-                <button type="button" onclick="calcularPrecioConDescuento()">Ver el precio con descuento</button>
-                </form>
+            <input type="number" id="inputPrecio"/>
+            <br/>
+            <label for="inputPrecio">Escriba el descuento ofrecido:</label>
+            <br/>
+            <input type="number" id="inputDescuento"/>
+            <br/>
+            <button type="button" onclick="calcularPrecioConDescuento()">Ver el precio con descuento</button>
+            </form>
         </section>
     <script src="script.js"></script>
 </body>
