--- a/index.html
+++ b/index.html
@@ -4,13 +4,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Discounts</title>
+    <title>Calculadora de Descuentos</title>
     <link rel="stylesheet" href="style.css"/>
 </head>
 <body>
+    <header>
+        <div< class="header">
+      <h1>  Calculadora de Descuentos</h1>
+        <button id="cambioIdioma" onclick="changeLanguage">English Version</button>
+    </div>
+    </header>
     <main class="main">
         <section class="section1"> 
             <h2>¿Cuál es el descuento que te ofrecen?</h2>
+            <h3>¿Te ofrecen un descuento por un producto? Comprobá cuánto vas a pagar!</h3>
             <form>    
             <label for="inputPrecio">Escriba el precio sin descuento:</label>
             <br/>
@@ -23,6 +30,14 @@
             <button type="button" onclick="calcularPrecioConDescuento()">Ver el precio con descuento</button>
             </form>
         </section>
+        <footer>
+            Coded by: Helena des Troy. You can see another repositories of Helena <span><a href="https://github.com/HelenaDestroy?tab=repositories">here</a></span>.</p>
+        </footer>
+        <script src="script.js"></script>
+    </body>
+    </html>
+    
+        </footer>
     <script src="script.js"></script>
 </body>
 </html>
